# Example-YOLO

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/: __init__.py  config.py
src/process/: __init__.py  numbers.py  tools.py  validation.py
src/routes/: __init__.py  process.py
test/: config.py  test_process.py
